# genesis

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: session-start.md
.claude/skills/genesis-backend/: SKILL.md
.claude/skills/genesis-frontend/: SKILL.md
backend/: __init__.py  config.py  main.py
backend/agent/: __init__.py  evaluator.py  evolver.py  executor.py  graph.py  planner.py  registrar.py  sandbox.py  state.py
backend/api/: __init__.py  routes.py  streaming.py
backend/db/: __init__.py  database.py  models.py
backend/skills/: __init__.py  registry.py  skill_tree.py  templates.py
backend/skills/core_tools/: __init__.py  browser_tool.py  calculator.py  file_io.py  text_analysis.py  web_search.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AgentFeed.tsx  ChatPanel.tsx  CodeViewer.tsx  EvolutionBanner.tsx  SkillDetail.tsx  SkillTree.tsx
frontend/src/hooks/: useDemoMode.ts  useSkillTree.ts  useWebSocket.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/styles/: globals.css
tests/: test_skills.py
